RM37563 - bugfix - remove 1px gap above My Profile

--- a/src/index.scss
+++ b/src/index.scss
@@ -222,6 +222,7 @@ table {
 
 button,
 .button {
+  margin: 0;
   cursor: pointer;
   text-decoration: none;
   display: inline-block;
